# traceotter-sdk

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: commit.mdc
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: lint.yml  publish.yml  test.yml
scripts/: install-git-hooks.sh
tests/: test_client_config.py  test_imports.py
traceotter/: __init__.py  attributes.py  client.py  models.py  serializers.py
traceotter/_utils/: ingest_schema.py  request.py  serializer.py
traceotter/langchain/: __init__.py  callback_handler.py
