[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traceotter"
version = "0.2.2"
description = "Production observability SDK for LLM apps and LangChain agents with OpenTelemetry-style tracing and low-friction callbacks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "grpcio>=1.78.0,<2.0.0",
  "protobuf>=5.29.0,<7.0.0",
  "httpx>=0.28.0,<1.0.0",
  "langchain>=0.3.0,<0.4.0",
  "langchain-core>=0.3.0,<0.4.0",
  "langchain-openai>=0.3.0,<0.4.0",
]

[tool.setuptools.packages.find]
include = ["traceotter*"]

