[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traceotter"
version = "0.2.6"
description = "Production observability SDK for LLM apps and LangChain agents with OpenTelemetry-style tracing and low-friction callbacks."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "grpcio>=1.78.0,<2.0.0",
  "protobuf>=5.29.0,<7.0.0",
  "httpx>=0.28.0,<1.0.0",
  "langchain>=0.3.0,<0.4.0",
  "langchain-core>=0.3.0,<0.4.0",
  "langchain-openai>=0.3.0,<0.4.0",
]

[tool.setuptools.packages.find]
include = ["traceotter*"]

[dependency-groups]
dev = [
  "coverage[toml]>=7.6.0",
  "pytest>=8.0.0",
  "ruff>=0.15.0,<0.16",
]

[tool.ruff]
target-version = "py311"
exclude = ["traceotter/proto"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.coverage.run]
branch = true
source = ["traceotter"]

[tool.coverage.report]
omit = ["*/traceotter/proto/*"]

